# Analizador_lexico_Go

./: CMakeLists.txt  LEEME.txt  TS.c  TS.h  analizador_lexico.c  analizador_lexico.h  analizador_sintactico.c  analizador_sintactico.h  concurrentSum1.go  definiciones.h  errores.c  errores.h  lista.c  lista.h  main.c  makefile  script.sh  sistema_de_entrada.c  sistema_de_entrada.h  tabla_hash_encadenamiento.c  tabla_hash_encadenamiento.h
